Update Exception file, Produt Service,add ResourceNotFound and update CICD file