@@ -2,6 +2,7 @@ package com.maryam.spring_ci_cd_github_action.service.Impl;
 
 import com.maryam.spring_ci_cd_github_action.dto.ProductDTO;
 import com.maryam.spring_ci_cd_github_action.entity.Product;
+import com.maryam.spring_ci_cd_github_action.exception.ResourceNotFoundException;
 import com.maryam.spring_ci_cd_github_action.mapper.ProductMapper;
 import com.maryam.spring_ci_cd_github_action.repository.ProductRepository;
 import com.maryam.spring_ci_cd_github_action.service.IProductService;
@@ -45,7 +46,7 @@ public class ProductServiceImpl implements IProductService {
         log.info("{} produits récupérés de la base de données", products.size());
         return products.stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -59,7 +60,7 @@ public class ProductServiceImpl implements IProductService {
                 })
                 .orElseThrow(() -> {
                     log.error("ÉCHEC : Produit introuvable avec l'ID : {}", id);
-                    return new RuntimeException("Product not found with id: " + id);
+                    throw new ResourceNotFoundException("Product not found with id: " + id);
                 });
     }
 
@@ -96,7 +97,7 @@ public class ProductServiceImpl implements IProductService {
 
         if (!productRepository.existsById(id)) {
             log.error("Suppression impossible : l'ID {} n'existe pas", id);
-            throw new RuntimeException("Product not found with id: " + id);
+            throw new ResourceNotFoundException("Product not found with id: " + id);
         }
 
         productRepository.deleteById(id);
